--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,27 +1,22 @@
-.float-container {
-    border: 3px solid #fff;
-    padding: 20px;
-}
-.float-child {
-    width: 50%;
-    float: left;
-    padding: 20px;
-    border: 2px solid red;
-}  
-#loanBtn
+ #loanBtn
 {
     display: none;
 }
+.flex-container {
+    display: flex;
+}
+.flex-child {
+    flex: 1;
+    border: 2px solid yellow;
+    margin-right: 5px;
+    margin-left: 5px;
+    padding-top: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+} 
+.imageComputer
+{
+    height: 200px;
+    width: 300px;
+}
 
-
-.container {  display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      ". . ."
-      ". . ."
-      ". . .";
-  }
-  
